# swagger.json
@@ -218,6 +218,182 @@
         }
       }
     },
+    "/api/v1/media/upload": {
+      "post": {
+        "summary": "Upload gambar",
+        "tags": [
+          "Media"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Gambar berhasil di-upload"
+          },
+          "400": {
+            "description": "Gagal upload gambar"
+          }
+        }
+      }
+    },
+    "/api/v1/media": {
+      "get": {
+        "summary": "Mendapatkan semua gambar",
+        "tags": [
+          "Media"
+        ],
+        "responses": {
+          "200": {
+            "description": "Berhasil mendapatkan daftar gambar"
+          },
+          "400": {
+            "description": "Gagal mendapatkan daftar gambar"
+          }
+        }
+      }
+    },
+    "/api/v1/media/{imageId}": {
+      "get": {
+        "summary": "Mendapatkan gambar berdasarkan ID",
+        "tags": [
+          "Media"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "imageId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID gambar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Berhasil mendapatkan gambar"
+          },
+          "404": {
+            "description": "Gambar tidak ditemukan"
+          },
+          "500": {
+            "description": "Kesalahan server"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Menghapus gambar berdasarkan ID",
+        "tags": [
+          "Media"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "imageId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID gambar"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Berhasil menghapus gambar"
+          },
+          "500": {
+            "description": "Gagal menghapus gambar"
+          }
+        }
+      },
+      "put": {
+        "summary": "Mengedit informasi gambar berdasarkan ID",
+        "tags": [
+          "Media"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "imageId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID gambar"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "title": {
+                    "type": "string"
+                  },
+                  "description": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Gambar berhasil di-update"
+          },
+          "500": {
+            "description": "Gagal meng-update gambar"
+          }
+        }
+      }
+    },
+    "/api/v1/media/user/{userId}": {
+      "get": {
+        "summary": "Mendapatkan gambar berdasarkan ID user",
+        "tags": [
+          "Media"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "userId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "ID user"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Berhasil mendapatkan gambar"
+          },
+          "404": {
+            "description": "Gambar tidak ditemukan"
+          },
+          "500": {
+            "description": "Kesalahan server"
+          }
+        }
+      }
+    },
     "/api/v1/profiles": {
       "post": {
         "summary": "Membuat profil baru",
